Progress on PS2 problem2, seems to work now

--- a/A2/Makefile
+++ b/A2/Makefile
@@ -1,14 +1,27 @@
 FLAGS = \
-	-Iinclude
+	-Iinclude \
+	-lfftw3 \
+	-lm \
+	-fsanitize=address
 
 all:
 	mkdir -p data figures 
 	g++ $(FLAGS) main.cpp -o main
+	rm -f data/*.csv
+	rm -f figures/*.png
+	rm -f figures/*.gif
 	./main
 	python plot.py
 
 cpp11:
 	mkdir -p data figures 
 	g++-11 $(FLAGS) main.cpp -o main
+	rm -f data/*.csv
+	rm -f figures/*.png
+	rm -f figures/*.gif
 	./main
 	python plot.py
+
+fftw_test: fftw_test.cpp
+	g++-11 $(FLAGS) fftw_test.cpp -o fftw_test
+	./fftw_test
