PS2 basically done

--- a/A2/Makefile
+++ b/A2/Makefile
@@ -11,7 +11,7 @@ all:
 	rm -f figures/*.png
 	rm -f figures/*.gif
 	./main
-	python plot.py
+	python3 plot_spectrum.py
 
 cpp11:
 	mkdir -p data figures 
@@ -20,7 +20,7 @@ cpp11:
 	rm -f figures/*.png
 	rm -f figures/*.gif
 	./main
-	python plot.py
+	python3 plot_spectrum.py
 
 fftw_test: fftw_test.cpp
 	g++-11 $(FLAGS) fftw_test.cpp -o fftw_test
