Fixed Arkadys comments on A1

--- a/A1/Makefile
+++ b/A1/Makefile
@@ -5,10 +5,12 @@ all:
 	mkdir -p data figures 
 	g++ $(FLAGS) main.cpp -o main
 	./main
-	python plot.py
+	python3 plot.py
 
 cpp11:
-	mkdir -p data figures 
+	mkdir -p data figures
+	rm -f output/*.csv
+	rm -f figures/*.pdf
 	g++-11 $(FLAGS) main.cpp -o main
 	./main
-	python plot.py
+	python3 plot.py
