corrected problem sets 1 and 2 + saved figures for A1

--- a/A1/Makefile
+++ b/A1/Makefile
@@ -3,13 +3,15 @@ FLAGS = \
 
 all:
 	mkdir -p data figures 
+	rm -f data/*.csv
+	rm -f figures/*.pdf
 	g++ $(FLAGS) main.cpp -o main
 	./main
 	python3 plot.py
 
 cpp11:
 	mkdir -p data figures
-	rm -f output/*.csv
+	rm -f data/*.csv
 	rm -f figures/*.pdf
 	g++-11 $(FLAGS) main.cpp -o main
 	./main
